<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_contacts"
            android:title="@string/contacts"
          />
        <item
            android:id="@+id/nav_offer"
            android:title="@string/offer"
            />
        <item
            android:id="@+id/nav_plan"
            android:title="@string/my_plan"
            />
        <item
            android:id="@+id/nav_language"
            android:title="@string/language"
             />
        <item
            android:id="@+id/nav_rate_app"
            android:title="@string/rate_app"
           />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/terms"
            />
        <item
            android:id="@+id/nav_privacy"
            android:title="@string/privacy"
           />
        <item
            android:id="@+id/nav_contact_us"

            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq"
            />
        <item
            android:id="@+id/nav_query"
            android:title="@string/query_report"
          />
    </group>


    <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
               />
    </group>


</menu>
