<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:visibility="gone"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.mobileoid2.celltone.CustomWidget.TextView.ProximumRegularTextView
                android:id="@+id/txt_user_upload_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:maxLines="1"
                android:textColor="@color/black" />

            <com.mobileoid2.celltone.CustomWidget.TextView.ProximumRegularTextView
                android:id="@+id/bt_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/upload"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.mobileoid2.celltone.CustomWidget.TextView.ProximumRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/history"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">


                <com.mobileoid2.celltone.CustomWidget.TextView.ProximumExtraBoldTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center"
                    android:text="@string/media_name"
                    android:textColor="@color/black" />

                <com.mobileoid2.celltone.CustomWidget.TextView.ProximumExtraBoldTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center"
                    android:text="@string/applied"
                    android:textColor="@color/black" />


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_user_upload_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/white"></android.support.v7.widget.RecyclerView>


        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/media_player_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary" />
    </RelativeLayout>
</RelativeLayout>