<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/custom_progressbar"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:spb_color="#FFFFFF"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="false"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"
        app:spb_reversed="false"
        app:spb_sections_count="5"
        app:spb_speed="1.0"
        app:spb_stroke_separator_length="5dp"
        app:spb_stroke_width="4dp" />

    <RelativeLayout
        android:id="@+id/layout_assign_song"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_progressbar"
        android:background="@android:color/white"
        android:padding="10dp">


        <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
            android:id="@+id/textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_contact_selection"
            android:textSize="16sp" />

        <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
            android:id="@+id/textview_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textview_header"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_header"
            android:orientation="horizontal">

            <com.mobileoid2.celltone.CustomWidget.Checkbox.CheckboxEuro55Regular
                android:id="@+id/checkbox_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_checkbox"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_select_all"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_checkbox"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp">

            <com.mobileoid2.celltone.CustomWidget.EditTextView.EditTextEuro55Regular
                android:id="@+id/edittext_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/search_field"
                android:drawableLeft="@mipmap/search_field_icon"
                android:maxLines="1"
                android:paddingStart="5dp" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_done"
            android:layout_below="@+id/layout_search"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_layout_purple_solid"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/text_done"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>
